<resources>
    <string name="app_name">Skinnie</string>
    <string name="logo_skinnie">logo skinnie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="dh_account">Belum memiliki akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="google">masuk dengan Google</string>
    <string name="name">Nama</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="title_forgot_password">Ganti Password</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="submit">Ganti</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="instruction1">1. Pastikan Anda berada di tempat dengan pencahayaan yang baik dan cukup.</string>
    <string name="title_instruction">Instruksi Pemakaian</string>
    <string name="instruction2">2. Pastikan wajah Anda bersih dari kotoran, minyak, atau makeup berlebihan.</string>
    <string name="instruction3">3. Pastikan tidak ada bayangan yang menutupi wajah Anda saat melakukan scan.</string>
    <string name="instruction4">4. Tempatkan wajah Anda di tengah layar dan pastikan seluruh wajah terlihat dengan jelas.</string>
    <string name="instruction5">5. Usahakan untuk tetap tenang dan menghindari gerakan yang cepat.</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="result_scan">Hasil Scan</string>
    <string name="title_result">Tipe kulit wajah Anda</string>
    <string name="result">Kulit Berminyak</string>
    <string name="confirm_result">Apakah tipe kulit Anda sudah benar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="skin_type">Tipe Kulit</string>
    <string name="title_input">Pilihlah kondisi yang sesuai dengan wajah anda</string>
    <string name="oily">Berminyak</string>
    <string name="dry">Kering</string>
    <string name="normal">Normal</string>
    <string name="next">Continue</string>
    <string name="preview_image">Preview Image</string>
    <string name="send">Kirim</string>
    <string name="prepare_scan">Persiapan Scan</string>
    <string name="recomended">Rekomendasi</string>
    <string name="title_recomended">Tipe kulit wajah kamu</string>
    <string name="ingredients">Key Ingredients</string>
    <string name="ingredient1">Hyaluronic acid</string>
    <string name="ingredient2">Glycerin</string>
    <string name="ingredient3">Glycolic acid</string>
    <string name="ingredient4">Aloe vera</string>
    <string name="title_product">Produk</string>
    <string name="dummy_merek">Skintific</string>
    <string name="dummy_price">Rp %1$s</string>
    <string name="dummy_desc">Skintific 5X Ceramide Barrier Moisture Gel menggabungkan 3 kandungan aktif Ceramide, Hyaluronic Acid, dan Centella Asiatica, untuk mengatasi permasalahan skin barrier yang rusak seperti jerawat, kemerahan, kulit bertekstur, dan juga kulit kering secara cepat namun tetap aman untuk skin barrier. Diperkaya dengan teknolog 5X Ceramide, yang merupakan gabungan 5 jenis Ceramide untuk melembabkan secara mendalam dan memperkuat lapisan kulit. 5X Ceramide ini membantu untuk memperbaiki dan melindungi skin barrier dengan menjaga kelembaban dan melindungi kulit dari faktor eksternal.</string>
    <string name="back">Kembali</string>
    <string name="background">background</string>
    <string name="capture_image">Tangkap Gambar</string>
    <string name="switch_camera">Putar Kamera</string>
    <string name="ilustration">Ilustrasi Gambar Kulit</string>
    <string name="image_product">Gambar Produk Skincare</string>
    <string name="or">atau</string>
    <string name="divider">garis pembatas</string>
    <string name="try_again">Coba Lagi</string>
    <string name="choose">Pilih Tipe Kulit</string>
    <string name="detail_product">Rincian Produk</string>
    <string name="favorite">Favorite</string>
    <string name="brand_product">-</string>
    <string name="name_product">%2$s</string>
    <string name="ingredient">Vitamin C, Niacinamide, Galactomyces Ferment Filtrate</string>
    <string name="title_tutorial">Cara Pakai :</string>
    <string name="tutorial">Gunakan 1–2x sehari. Usapkan pada bagian kulit wajah, area mata dan leher. Pijat lembut dengan gerakan memutar untuk hasil yang optimal.</string>
    <string name="icon_favorite">Tambah Favorit</string>
    <string name="list_product">List Produk</string>
    <string name="empty_product">Maaf tidak ada produk yang tersedia</string>
    <string name="reviewed">(%1$s reviewed)</string>
    <string name="rate">Rating :</string>
    <string name="rating">rating</string>
    <string name="rb1">Tidak Yakin</string>
    <string name="rb2">Kurang Yakin</string>
    <string name="rb3">Yakin</string>
    <string name="rb4">Cukup Yakin</string>
    <string name="rb5">Sangat Yakin</string>
    <string name="tidak_berjerawat">Tidak berjerawat</string>
    <string name="kulit_kelihatan_kering_sekali">Kulit kelihatan kering sekali</string>
    <string name="pori_pori_halus">Pori-pori halus</string>
    <string name="tekstur_kulit_wajah_tipis">Tekstur kulit wajah tipis</string>
    <string name="hasil">Hasil</string>
    <string name="hasil_normal">Hasil Normal</string>
    <string name="hasil_berminyak">Hasil Berminyak</string>
    <string name="hasil_kering">Hasil Kering</string>
    <string name="ingredient_oily1">Niacinamide</string>
    <string name="ingredient_oily2">Salicylic Acid</string>
    <string name="ingredient_oily3">Hyaluronic Acid</string>
    <string name="ingredient_oily4">Glycolic Acid</string>
    <string name="ingredient_normal1">Niacinamide</string>
    <string name="ingredient_normal2">Lactic Acid</string>
    <string name="ingredient_normal3">Hyaluronic Acid</string>
    <string name="ingredient_normal4">Aloe Vera</string>
    <string name="ingredient_dry1">Glycerin</string>
    <string name="ingredient_dry2">Retinol</string>
    <string name="ingredient_dry3">Lactic Acid</string>
    <string name="ingredient_dry4">Squalane</string>

    <string-array name="spinner_subcategory">
        <item>Semua subcategory</item>
        <item>Peeling</item>
        <item><![CDATA[Serum & Essence]]></item>
        <item>Cream</item>
        <item>Mask Sheet</item>
        <item>Toner</item>
        <item>Eye Cream</item>
        <item>Sun Protection</item>
        <item>Wash-Off</item>
        <item>Face Mist</item>
        <item>Facial Wash</item>
        <item>Acne Treatment</item>
        <item>Gel</item>
        <item><![CDATA[Lotion & Emulsion]]></item>
        <item>Face Oil</item>
        <item>Face</item>
        <item>Oil</item>
        <item><![CDATA[Brow & Lash Treatment]]></item>
        <item><![CDATA[Scrub & Exfoliator]]></item>
        <item>Skin Soothing Treatment</item>
        <item><![CDATA[Eye & Lip]]></item>
        <item>Eye Serum</item>
        <item><![CDATA[Cream & Lotion]]></item>
        <item>Sleeping Mask</item>
    </string-array>
</resources>