<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recomend.RecomendedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/recomended"
        app:titleMarginStart="65dp"
        app:titleTextAppearance="@style/TitleToolbar" />

    <TextView
        android:id="@+id/tvTitleRecomended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_recomended"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvRecomended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_green"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/oily"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleRecomended"
        app:layout_constraintStart_toStartOf="@+id/tvTitleRecomended"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRecomended" />

    <TextView
        android:id="@+id/tvTitleIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/tvRecomended" />

    <TextView
        android:id="@+id/tvIngredient1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_cream"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/ingredient1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvTitleIngredient"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleIngredient" />

    <TextView
        android:id="@+id/tvIngredient2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_cream"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/ingredient2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvIngredient1"
        app:layout_constraintTop_toTopOf="@+id/tvIngredient1" />

    <TextView
        android:id="@+id/tvIngredient3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_cream"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/ingredient3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvIngredient1"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredient1" />

    <TextView
        android:id="@+id/tvIngredient4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_cream"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/ingredient4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvIngredient3"
        app:layout_constraintTop_toTopOf="@+id/tvIngredient3" />

    <TextView
        android:id="@+id/tvTitleProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_product"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvIngredient3"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredient3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rvProduct"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cream"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleProduct">

        <LinearLayout
            android:id="@+id/llCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDummyProduct"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/image_product"
                android:src="@drawable/dummy_product" />

            <LinearLayout
                android:id="@+id/llTextProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMerekProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/dummy_merek"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLines="2"
                    android:text="@string/dummy_desc"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvPriceProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dummy_price"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
