<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/logo_skinnie"
            android:src="@drawable/skinnie_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_white"
            android:hint="@string/username"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_login" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_button"
            android:paddingHorizontal="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_dh_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dh_account"
            android:textColor="@color/black"
            android:layout_marginStart="100dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tv_dh_account"
            app:layout_constraintTop_toTopOf="@+id/tv_dh_account" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn_google"
            android:drawablePadding="5dp"
            android:paddingHorizontal="20dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/brown"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/google"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_dh_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>